Half part of pages

--- a/EndProjectOrgani/Views/Blog/BlogPage.cshtml
+++ b/EndProjectOrgani/Views/Blog/BlogPage.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<Blog>
 
+<link rel="stylesheet" href="~/MemberPanel/assets/css/blog.css">
+<link rel="stylesheet" href="~/MemberPanel/assets/sass/blog.css">
 
 <main>
 
@@ -183,3 +185,6 @@
         </div>
     </div>
 </main>
+
+<script type="module" src="~/MemberPanel/assets/js/blog.js"></script>
+<script type="module" src="~/MemberPanel/assets/js/blogdetail.js"></script>
