--- a/EndProjectOrgani/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Views/Shared/_Layout.cshtml
@@ -15,23 +15,23 @@
     <link rel="stylesheet" href="~/MemberPanel/assets/css/home.css">
 
     @*<link rel="stylesheet" href="~/MemberPanel/assets/css/blog.css">
-    <link rel="stylesheet" href="~/MemberPanel/assets/sass/blog.css">*@
+        <link rel="stylesheet" href="~/MemberPanel/assets/sass/blog.css">*@
 
 
     @*<link rel="stylesheet" href="~/MemberPanel/assets/sass/contact.css">
-    <link rel="stylesheet" href="~/MemberPanel/assets/css/contact.css">*@
+        <link rel="stylesheet" href="~/MemberPanel/assets/css/contact.css">*@
 
     @*<link rel="stylesheet" href="~/MemberPanel/assets/sass/shopdetail.css">
-    <link rel="stylesheet" href="~/MemberPanel/assets/css/shopdetail.css">
+        <link rel="stylesheet" href="~/MemberPanel/assets/css/shopdetail.css">
 
-    <link rel="stylesheet" href="~/MemberPanel/assets/sass/shopcard.css">
-    <link rel="stylesheet" href="~/MemberPanel/assets/css/shopcard.css">
+        <link rel="stylesheet" href="~/MemberPanel/assets/sass/shopcard.css">
+        <link rel="stylesheet" href="~/MemberPanel/assets/css/shopcard.css">
 
-    <link rel="stylesheet" href="~/MemberPanel/assets/sass/blogdetail.css">
-    <link rel="stylesheet" href="~/MemberPanel/assets/css/blogdetail.css">*@
+        <link rel="stylesheet" href="~/MemberPanel/assets/sass/blogdetail.css">
+        <link rel="stylesheet" href="~/MemberPanel/assets/css/blogdetail.css">*@
 
 
- 
+
     <link rel="stylesheet" href="~/MemberPanel/assets/css/shop.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
           integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -51,6 +51,7 @@
 
     <title>Home Page</title>
 </head>
+
 
 <body>
 
@@ -78,20 +79,20 @@
                         <div class="right-first-header">
                             <div class="exchange-login-social">
                                 <ul>
-                                    <li class="social">
-                                        <a href="">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                        <a href="">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a>
-                                    </li>
+                                    @*<li class="social">
+                                            <a href="">
+                                                <i class="fab fa-facebook-f"></i>
+                                            </a>
+                                            <a href="">
+                                                <i class="fab fa-twitter"></i>
+                                            </a>
+                                            <a href="">
+                                                <i class="fab fa-linkedin-in"></i>
+                                            </a>
+                                            <a href="">
+                                                <i class="fab fa-pinterest-p"></i>
+                                            </a>
+                                        </li>*@
 
                                     <li class="login">
 
@@ -100,13 +101,7 @@
                                             <span><a href="~/MemberPanel/register.html">Register</a></span>
                                         </div>
 
-                                        <!-- <div class="dropdown">
-                                            <button class="dropbtn">English <i class="fas fa-angle-down"></i></button>
-                                            <div class="dropdown-content">
-                                                <a href="#">English</a>
-                                                <a href="#">Spain</a>
-                                            </div>
-                                        </div> -->
+
                                     </li>
 
                                     <li class="login">
@@ -129,7 +124,10 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-12">
                         <div class="ogani">
-                            <img src="~/MemberPanel/assets/img/logo.png" alt="ogani" href="~/MemberPanel/home.html">
+                            <a asp-action="HomePage" asp-controller="Home">
+                                <img src="~/MemberPanel/assets/img/logo.png" alt="ogani">
+                            </a>
+
 
                         </div>
                     </div>
@@ -139,19 +137,13 @@
                                 <a asp-action="HomePage" asp-controller="Home" id="drop">HOME</a>
                             </li>
                             <li>
-                                <div class="dropdown">
-                                    <button class="dropbtn"><a asp-action="ShopPage" asp-controller="Shop" target="_blank" id="drop">SHOP</a></button>
-
-                                </div>
+                                <a asp-action="ProductPage" asp-controller="Product" id="drop">PRODUCT</a>
                             </li>
                             <li>
-                                <div class="dropdown">
-                                    <button class="dropbtn"><a asp-action="BlogPage" asp-controller="Blog" target="_blank" id="drop">BLOG</a></button>
-                                    <div class="dropdown-content">
-                                        <a href="~/MemberPanel/blogdetail.html" target="_blank">Blog Details</a>
-
-                                    </div>
-                                </div>
+                                <a asp-action="ShopPage" asp-controller="Shop" target="_blank" id="drop">SHOP</a>
+                            </li>
+                            <li>
+                                <a asp-action="BlogPage" asp-controller="Blog" target="_blank" id="drop">BLOG</a>
                             </li>
                             <li>
                                 <a asp-action="ContactPage" asp-controller="Contact" target="_blank" id="drop">CONTACT</a>
@@ -181,8 +173,6 @@
                                     <i class="fas fa-shopping-basket"></i>
                                 </a>
                             </span>
-
-
 
                             <span class="price">
 
@@ -217,15 +207,7 @@
                             <div class="dropdown-cate">
                                 <button id="all-categ">All Categories <i class="fas fa-angle-down"></i></button>
                                 <div class="dropdown-content-cate">
-                                    <a href="#home">Fresh Meats</a>
-                                    <a href="#about">Vegetables</a>
-                                    <a href="#contact">Fruit</a>
-                                    <a href="#about">Fresh Berries</a>
-                                    <a href="#about">Ocean Foods</a>
-                                    <a href="#about">Butter & Eggs</a>
-                                    <a href="#about">Fastfood</a>
-                                    <a href="#about">Fresh Onion</a>
-                                    <a href="#about">Nut Gifts</a>
+                                    @await Component.InvokeAsync("CategoryList")
 
                                 </div>
 
@@ -247,7 +229,7 @@
 
                             <div class="phone">
                                 <div class="number">
-                                    +994 50 450 95 55
+                                    +994 55 856 23 93
                                 </div>
                                 <div class="support">
                                     support 24/7 time
@@ -292,14 +274,14 @@
                             <div class="links">
 
                                 <div class="navbar">
-                                    <a href="~/MemberPanel/home.html">Home</a>
-                                    <a href="~/MemberPanel/shop.html">Shop</a>
-                                    <a href="~/MemberPanel/blog.html">Blog</a>
-                                    <a href="~/MemberPanel/contact.html">Contact</a>
+                                    <a asp-action="HomePage" asp-controller="Home">Home</a>
+                                    <a asp-action="ShopPage" asp-controller="Shop">Shop</a>
+                                    <a asp-action="BlogPage" asp-controller="Blog">Blog</a>
+                                    <a asp-action="ContactPage" asp-controller="Contact">Contact</a>
 
                                 </div>
                                 <div class="ourselves-link">
-                                    <a href="">Who We Are</a>
+                                    <a href="https://en.wikipedia.org/wiki/Planet_Organic">Who We Are</a>
                                     <a href="">Our Services</a>
                                     <a href="">Projects</a>
                                     <a href="">Innovation</a>
@@ -335,7 +317,6 @@
 
 
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -365,6 +346,10 @@
 
 
     <script src="https://kit.fontawesome.com/ad811518ca.js" crossorigin="anonymous"></script>
+
+
+    <script src="~/MemberPanel/assets/js/item.js"></script>
+    <script type="module" src="~/MemberPanel/assets/js/products.js"></script>
 
 
 </body>
