--- a/EndProjectOrgani/Areas/AdminPanel/Views/Comment/CommentList.cshtml
+++ b/EndProjectOrgani/Areas/AdminPanel/Views/Comment/CommentList.cshtml
@@ -31,7 +31,7 @@
                                         <h6>@saleoff.Message</h6>
                                     </td>
                                     <td colspan="2" style="padding-top:20px">
-                                        <h6>@saleoff.Blog.Title</h6>
+                                        <h6>@saleoff.Product.Name</h6>
                                     </td>
                                     <td colspan="2" style="padding-top:20px">
                                         <h6>@saleoff.CreatedDate</h6>
