--- a/EndProjectOrgani/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 
 
 
-    <link rel="stylesheet" href="~/MemberPanel/assets/css/shop.css">
+    @*<link rel="stylesheet" href="~/MemberPanel/assets/css/shop.css">*@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
           integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -329,11 +329,7 @@
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"></script>
 
-    <!-- owl-carusel plugin -->
-    <script src="~/jquery.min.js"></script>
-    <script src="~/owlcarousel/owl.carousel.min.js"></script>
-    <!-- owl-carusel plugin -->
-    <!-- Jquery start -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
             integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -346,10 +342,13 @@
 
 
     <script src="https://kit.fontawesome.com/ad811518ca.js" crossorigin="anonymous"></script>
+    @RenderSection("scripts", required: false)
 
 
-    <script src="~/MemberPanel/assets/js/item.js"></script>
-    <script type="module" src="~/MemberPanel/assets/js/products.js"></script>
+    @*<script src="~/MemberPanel/assets/js/item.js"></script>
+    <script type="module" src="~/MemberPanel/assets/js/products.js"></script>*@
+
+
 
 
 </body>
