Create half part identity

--- a/EndProjectOrgani/Views/Blog/BlogPage.cshtml
+++ b/EndProjectOrgani/Views/Blog/BlogPage.cshtml
@@ -186,5 +186,7 @@
     </div>
 </main>
 
-<script type="module" src="~/MemberPanel/assets/js/blog.js"></script>
-<script type="module" src="~/MemberPanel/assets/js/blogdetail.js"></script>
+@section Scripts {
+    <script asp-append-version="true" src="~/MemberPanel/assets/js/blog.js"></script>
+
+}
