--- a/EndProjectOrgani/Views/Product/ProductPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductPage.cshtml
@@ -2,6 +2,8 @@
 
 <link rel="stylesheet" href="~/MemberPanel/assets/sass/products.css">
 
+<link rel="stylesheet" href="~/MemberPanel/assets/css/products.css">
+
 <main>
     <section id="background-potatoes">
         <div class="background-potatoes">
@@ -59,10 +61,10 @@
                                             <img src="~/AdminPanel/img/product/@product.Image" alt="potatoes">
                                             <div class="icons">
                                                 <div class="heart-icon">
-                                                    <a href=""><i class="fas fa-heart"></i></a>
+                                                    <a href="" id="addheart"><i class="fas fa-heart"></i></a>
                                                 </div>
                                                 <div class="basket-icon">
-                                                    <a href=""> <i class="fas fa-shopping-cart"></i></a>
+                                                    <a href="" id="addproduct"> <i class="fas fa-shopping-cart"></i></a>
                                                 </div>
                                                 <div class="detail-icon">
                                                     <a asp-action="ProductDetailsPage" asp-controller="Product" asp-route-id="@product.Id"> <i class="fas fa-info"></i></a>
@@ -107,4 +109,7 @@
     </section>
 </main>
 
-<script type="module" src="~/MemberPanel/assets/js/products.js"></script>
+@section Scripts {
+    <script asp-append-version="true" src="~/MemberPanel/assets/js/shop.js"></script>
+
+}
