--- a/EndProjectOrgani/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Views/Shared/_Layout.cshtml
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300&family=Dosis:wght@600&display=swap"
           rel="stylesheet">
-    <!-- owl-carusel-plugin -->
-    <!-- owl-carusel-plugin -->
+
     <link rel="stylesheet" href="~/MemberPanel/assets/sass/home.css">
     <link rel="stylesheet" href="~/MemberPanel/assets/css/home.css">
 
@@ -176,7 +175,7 @@
 
                             <span class="price">
 
-                                <span>item:</span><strong>$150.00</strong>
+                                <span>item:</span><strong>$00.00</strong>
 
                             </span>
 
@@ -345,8 +344,8 @@
     @RenderSection("scripts", required: false)
 
 
-    @*<script src="~/MemberPanel/assets/js/item.js"></script>
-    <script type="module" src="~/MemberPanel/assets/js/products.js"></script>*@
+    <script src="~/MemberPanel/assets/js/item.js"></script>
+    @*<script type="module" src="~/MemberPanel/assets/js/products.js"></script>*@
 
 
 
