--- a/EndProjectOrgani/Areas/AdminPanel/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Areas/AdminPanel/Views/Shared/_Layout.cshtml
@@ -143,9 +143,12 @@
                 <ul class="navbar-nav align-items-center right-nav-link">
 
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="~/AdminPanel/#">
-                            <span class="user-profile"><img src="~/AdminPanel/https://via.placeholder.com/110x110" class="img-circle" alt="user avatar"></span>
-                        </a>
+                        @*<a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="~/AdminPanel/#">
+                                <span class="user-profile"><img src="~/AdminPanel/https://via.placeholder.com/110x110" class="img-circle" alt="user avatar"></span>
+                            </a>*@
+                        <a asp-action="HomePage" asp-controller="Home" asp-area="">Ana Sehife</a>
+                        <a asp-action="LogOut" asp-controller="Account" asp-area="">LogOut</a>
+
                         <ul class="dropdown-menu dropdown-menu-right">
                             <li class="dropdown-item user-details">
                                 <a href="~/AdminPanel/javaScript:void();">
@@ -159,7 +162,7 @@
                                 </a>
                             </li>
                             <li class="dropdown-divider"></li>
-                            <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
+                            <li class="dropdown-item"><i class="icon-envelope mr-2"></i> LogOut</li>
                             <li class="dropdown-divider"></li>
                             <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li>
                             <li class="dropdown-divider"></li>
@@ -189,7 +192,7 @@
         </div>
 
 
-    
+
         <!--start color switcher-->
         <div class="right-sidebar">
             <div class="switcher-icon">
@@ -243,7 +246,7 @@
     <!-- Custom scripts -->
     <script src="~/AdminPanel/assets/js/app-script.js"></script>
     <!-- Chart js -->
-
+    
     <script src="~/AdminPanel/assets/plugins/Chart.js/Chart.min.js"></script>
 
     <!-- Index js -->
