--- a/EndProjectOrgani/Views/Account/Login.cshtml
+++ b/EndProjectOrgani/Views/Account/Login.cshtml
@@ -1,4 +1,41 @@
-﻿
-<h3>
-    login
-</h3>
+﻿@using EndProjectOrgani.Models
+@model UserLoginModel
+@{
+    Layout = null;
+}
+
+
+
+<link rel="stylesheet" asp-append-version="true" href="~/MemberPanel/assets/css/login.css">
+
+<div class="main-w3layouts wrapper">
+    <h1 style="height:40px;color:rgba(255,255,255,0.5)">Login</h1>
+    <div class="main-agileinfo">
+        <div class="agileits-top">
+            <form asp-action="Login" asp-controller="Account" method="post">
+                <div asp-validation-summary="All" style="color:red">
+
+                </div>
+                <input class="text" asp-for="Username" placeholder="Username" required="">
+                <input class="text" asp-for="Password" type="password" placeholder="Password" required="">
+
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't you have an Account? <a asp-action="SignUp" asp-controller="Account"> Register Now!</a></p>
+        </div>
+    </div>
+    <!-- copyright -->
+    <!-- //copyright -->
+    <ul class="colorlib-bubbles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
