--- a/EndProjectOrgani/Areas/AdminPanel/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Areas/AdminPanel/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+
     <title>Dashtreme Admin - Free Dashboard for Bootstrap 4 by Codervent</title>
     <!-- loader-->
     <link href="~/AdminPanel/assets/css/pace.min.css" rel="stylesheet" />
@@ -32,6 +33,8 @@
     <link href="~/AdminPanel/assets/css/index.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
+    
 </head>
 
 <body class="bg-theme bg-theme1">
@@ -142,14 +145,14 @@
 
                 <ul class="navbar-nav align-items-center right-nav-link">
 
-                    <li class="nav-item">
+                    <li class="nav-item" style="display:flex;gap:32px;">
                         @*<a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="~/AdminPanel/#">
                                 <span class="user-profile"><img src="~/AdminPanel/https://via.placeholder.com/110x110" class="img-circle" alt="user avatar"></span>
                             </a>*@
-                        <a asp-action="HomePage" asp-controller="Home" asp-area="">Ana Sehife</a>
-                        <a asp-action="LogOut" asp-controller="Account" asp-area="">LogOut</a>
+                        <a asp-action="HomePage" asp-controller="Home" asp-area=""><i style="font-size: 32px;" class="bi bi-house-door-fill"></i></a>
+                        <a style="margin-right:18px;" asp-action="LogOut" asp-controller="Account" asp-area=""><i style="font-size: 32px;" class="bi bi-backspace-reverse-fill"></i></a>
 
-                        <ul class="dropdown-menu dropdown-menu-right">
+                        @*<ul class="dropdown-menu dropdown-menu-right">
                             <li class="dropdown-item user-details">
                                 <a href="~/AdminPanel/javaScript:void();">
                                     <div class="media">
@@ -169,7 +172,7 @@
                             <li class="dropdown-item"><i class="icon-settings mr-2"></i> Setting</li>
                             <li class="dropdown-divider"></li>
                             <li class="dropdown-item"><i class="icon-power mr-2"></i> Logout</li>
-                        </ul>
+                        </ul>*@
                     </li>
                 </ul>
             </nav>
