--- a/EndProjectOrgani/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Views/Shared/_Layout.cshtml
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +34,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
           integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
 
@@ -57,7 +59,7 @@
 
     <!-- start header -->
     <header>
-        <div class="header-first-part">
+        <div style="height:51px;" class="header-first-part">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-sm-12">
@@ -77,21 +79,21 @@
                     <div class="col-lg-6 col-sm-12">
                         <div class="right-first-header">
                             <div class="exchange-login-social">
-                                <ul>
+                                <ul style="display:flex;gap:18px;">
                                     @*<li class="social">
-            <a href="">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-pinterest-p"></i>
-            </a>
-        </li>*@
+                                            <a href="">
+                                                <i class="fab fa-facebook-f"></i>
+                                            </a>
+                                            <a href="">
+                                                <i class="fab fa-twitter"></i>
+                                            </a>
+                                            <a href="">
+                                                <i class="fab fa-linkedin-in"></i>
+                                            </a>
+                                            <a href="">
+                                                <i class="fab fa-pinterest-p"></i>
+                                            </a>
+                                        </li>*@
 
                                     @if (!User.Identity.IsAuthenticated)
                                     {
@@ -114,12 +116,14 @@
                                     }
                                     else
                                     {
-                                        <a asp-action="Logout" asp-controller="Account">LogOut</a>
-
-                                        @if(User.IsInRole("Admin"))
+                                        @if (User.IsInRole("Admin"))
                                         {
-                                           <a asp-action="CategoryList" asp-controller="Category" asp-area="AdminPanel">Admin Panel</a> 
+                                            <a asp-action="CategoryList" asp-controller="Category" asp-area="AdminPanel"><i style="font-size:21px;color:black;" class="bi bi-person-square"></i></a>
                                         }
+
+                                        <a asp-action="Logout" asp-controller="Account"><i style="font-size:22px;color:black;" class="bi bi-box-arrow-right"></i></a>
+
+
                                     }
 
                                 </ul>
@@ -358,6 +362,9 @@
 
 
     <script src="~/MemberPanel/assets/js/item.js"></script>
+  
+
+
     @*<script type="module" src="~/MemberPanel/assets/js/products.js"></script>*@
 
 
